Bug 103452 - Rightclick followed by leftclick crashes Math
Summary: Rightclick followed by leftclick crashes Math
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2016-10-24 08:52 UTC by Thomas Hackert
Modified: 2017-07-10 15:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments
bt with symbols (8.79 KB, text/plain)
2016-10-24 18:59 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Hackert 2016-10-24 08:52:42 UTC
Hello @ll,
I hope I have chosen the right component and such. If not, feel free to change adequately ... ;)

Steps to reproduce:
1. Start LO
2. Press <Alt>+<M> to start Math
3. Rightclick in the bottom part of the window (Command pane? Or how is this called in English?)
4. Leftclick there

On my system

OS: Debian Testing AMD64
LO: Version: 5.3.0.0.alpha1
Build ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
CPU Threads: 4; OS Version: Linux 4.5; UI Render: default; VCL: gtk2; 
Locale: de-DE (de_DE.UTF-8); Calc: group

LO crashes immediately ... :(
Sorry for the inconvenience
Thomas.
Comment 1 Thomas Hackert 2016-10-24 09:11:59 UTC
Hi again,
needed to switch my systems, as I can also confirm it on

OS: Debian Testing i686
LO: Version: 5.3.0.0.alpha1
Build ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
CPU Threads: 2; OS Version: Linux 4.7; UI Render: default; VCL: kde4; 
Locale: de-DE (de_DE.UTF-8); Calc: group

On both systems, I followed the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux to install LO alongside to Debian's version.

The interesting difference is, that on my i686 system I am using KDE whereas on my AMD64 system XFCE 4. After the crash on my i686 box, I get a message about a KWin crash. But neither "soffice -backtrace" nor "soffice -strace" produces any file to attach to this bug, sorry ... :( .xsessions-errors shows only
<quote>
<snip>
QXcbConnection: XCB error: 3 (BadWindow), sequence: 28785, resource id: 44061251, major code: 18 (ChangePropert
y), minor code: 0
QXcbConnection: XCB error: 3 (BadWindow), sequence: 28786, resource id: 18892214, major code: 20 (GetProperty),
 minor code: 0
QXcbConnection: XCB error: 3 (BadWindow), sequence: 28787, resource id: 18892214, major code: 15 (QueryTree), m
inor code: 0
Application::crashHandler() called with signal 11; recent crashes: 1
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = kwin_x11 path = /usr/bin pid = 4814
KCrash: Arguments: /usr/bin/kwin_x11 -session 10d3696f62000147651786100000055160004_1477241433_640581 
KCrash: Attempting to start /usr/lib/i386-linux-gnu/libexec/drkonqi from kdeinit
kdeinit5: Got EXEC_NEW '/usr/lib/i386-linux-gnu/libexec/drkonqi' from wrapper.
kdeinit5: preparing to launch '/usr/lib/i386-linux-gnu/libexec/drkonqi'
found lsb_release
Using /proc to determine executable path
Executable is: "/usr/bin/kwin_x11"
Executable exists: true
Enabling drkonqi crash catching
Registering "org.kde.StatusNotifierItem-9268-1/StatusNotifierItem" to system tray
Sending SIGSTOP to process
Module 'org.kde.kwin.decoration' does not contain a module identifier directive - it cannot be protected from external registrations.
OpenGL vendor string:                   Intel Open Source Technology Center
OpenGL renderer string:                 Mesa DRI Intel(R) 945GME x86/MMX/SSE2
OpenGL version string:                  2.1 Mesa 12.0.3
OpenGL shading language version string: 1.20
Driver:                                 Intel
GPU class:                              i915/i945
OpenGL version:                         2.1
GLSL version:                           1.20
Mesa version:                           12.0.3
X server version:                       1.18.4
Linux kernel version:                   4.7
Requires strict binding:                yes
GLSL shaders:                           limited
Texture NPOT support:                   yes
Virtual Machine:                        no
QXcbConnection: XCB error: 9 (BadDrawable), sequence: 1814, resource id: 0, major code: 14 (GetGeometry), minor code: 0
<snip>
</quote>
if this is of any help ...
HTH
Thomas.
Comment 2 riesslibo 2016-10-24 12:11:39 UTC
Can confirm this for Win7

Version: 5.3.0.0.alpha1
Build-ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
CPU-Threads: 2; BS-Version: Windows 6.1; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group


Just start LO Math however you want
mouse in the pane for the formula statement
the context menue appears, click left mouse
button without choosing an entrypoint in tne
context menu immediatly crashs LO

crash details: a980cfba-025c-4511-9b2f-2f31647dbe78

Thanks Thomas,
best regards
Lothar
Comment 3 Thomas Hackert 2016-10-24 12:28:41 UTC
Hello Lothar, *,
as you have confirmed it with Win as well, setting "Hardware" to "All" instead of "Linux" ... ;)
Thanks for confirming and have a nice day
Thomas.
Comment 4 riesslibo 2016-10-24 12:40:22 UTC
You are absolutly rhight, so it should be also changed in the title of the bug ;-) I will remove the "Debian" hint in the headline, hope you are ok with it.
Best
Lothar
Comment 5 Julien Nabet 2016-10-24 18:59:55 UTC
Created attachment 128226 [details]
bt with symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this with rendering=kde4
Comment 6 Julien Nabet 2016-10-24 19:58:33 UTC
I submitted a fix to review here:
https://gerrit.libreoffice.org/#/c/30234/
Comment 7 Commit Notification 2016-10-24 20:29:21 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=168eb0bfd324be5d0023a8a3ea7ee58f1edbcbb8

tdf#103452: add missing xPopupMenu.disposeAndClear();

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2016-10-24 20:41:06 UTC
Don't hesitate to reopen this tracker if you still reproduce this.