tdf#103452: add missing xPopupMenu.disposeAndClear();

See https://bugs.documentfoundation.org/attachment.cgi?id=128226

Change-Id: If6641531b96f33b2864f69bd4195c92548fce148
Reviewed-on: https://gerrit.libreoffice.org/30234
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 168eb0bfd324be5d0023a8a3ea7ee58f1edbcbb8)